feat: add crc16